# ha-specialized-turbo

./: .gitignore  README.md  hacs.json  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
custom_components/specialized_turbo/: __init__.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  sensor.py  strings.json
custom_components/specialized_turbo/lib/: __init__.py
custom_components/specialized_turbo/translations/: en.json
tests/: conftest.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_sensor.py
