[project]
name = "ha-specialized-turbo"
version = "0.3.5"
description = "Specialized Turbo BLE integration for Home Assistant"
requires-python = ">=3.12"

[tool.uv]
python-preference = "managed"
environments = ["python_version >= '3.14'"]

[dependency-groups]
dev = [
    "aiousbwatcher>=1.1.0",
    "pyserial>=3.5",
    "pyudev>=0.24.4",
    "pytest>=9.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0",
    "pytest-homeassistant-custom-component",
    "specialized-turbo==0.4.2"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
